fix: repository를 jdbc로 사용하여 postgresql로 저장

--- a/src/main/resources/templates/DMpage/DMsubmit.html
+++ b/src/main/resources/templates/DMpage/DMsubmit.html
@@ -32,6 +32,10 @@
             <textarea type="text" id="content" name="content" placeholder="내용" style="width:500px;height:100px;"></textarea>
             <!--<input type="text" id="content" name="content" placeholder="내용" style="width:500px;height:100px;overflow:hidden;overflow-wrap: break-word;">-->
         </div>
+        <p>재난코드
+            01:산사태
+            02:홍수
+            03:차량통제</p>
         <button type="submit">등록</button>
     </form>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=625eb3d4cd28e2a2560c1e86b5fc221c"></script>
